fix: ensure all suggestions are visible to user and modal is not hides the suggestions

--- a/apps/panel/src/components/molecules/bucket-rules/BucketRules.module.scss
+++ b/apps/panel/src/components/molecules/bucket-rules/BucketRules.module.scss
@@ -11,6 +11,7 @@
   height: fit-content;
   padding: 0;
   overflow-x: hidden;
+  overflow: visible;
 }
 
 .headerContainer,
